--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your description
+  author: Aditya Prakash
+  description: Ansible role for setting up Nginx
   company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
@@ -27,11 +27,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
+  platforms:
+  - name: Ubuntu
+    versions:
+    - 16.04
   # - name: SomePlatform
   #   versions:
   #   - all
